feat: adicionando rota que busca todas categorias
